fix fdo#62143: set TEXT_LAYOUT_BIDI_STRONG flag.

Change-Id: I19ed1874ff73c3a8002934fa3456d718e383c5d6